FIX: improved visualization on small screens

--- a/pomo6/static/css/chat.css
+++ b/pomo6/static/css/chat.css
@@ -127,3 +127,9 @@
     width: 50%;
     margin: auto;
 }
+
+@media (max-width: 768px) {
+    .chat-container {
+        width: 100%;
+    }
+}
