--- a/pomo6/static/css/view-listing.css
+++ b/pomo6/static/css/view-listing.css
@@ -99,9 +99,14 @@
     .offer-container{
         grid-template-columns: 1fr;
     }
+
     .seller-profile{
         grid-column: 1;
         margin-top: 2rem;
+    }
+
+    .ad-comments {
+        grid-column: 1;
     }
 
 }
